--- a/modules/KalturaSupport/tests/Carousel.html
+++ b/modules/KalturaSupport/tests/Carousel.html
@@ -9,6 +9,8 @@
 	<h2> Carousel Test </h2>
 	<a href="?forceMobileHTML5"> Force Mobile Safari</a> for testing with desktop chrome and safari.
 	<br /><br />
+	Displays an on-screen list of clips, when playing its hidden, when paused its displayed. 
+	<br /><br />
 	<div style="float:left">
 		<!-- Manually added carousel to uiconf -->
 		<object id="kaltura_player_1329299975"
