--- a/modules/KalturaSupport/tests/EmbedSWFObject.2.2.qunit.html
+++ b/modules/KalturaSupport/tests/EmbedSWFObject.2.2.qunit.html
@@ -1,92 +1,105 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>kWidget Player test</title>
+<title>SwfObject 2.2 embed test</title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
-<script type="text/javascript" src="../../../mwEmbedLoader.php"></script>
+
+<!--  SwfObject must come before mwEmbed include -->
+<script type="text/javascript" src="resources/swfobject/swfobject.js"></script>
+
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script type="text/javascript">	
-window.kWidgetCallbackWithID = false;
 function jsKalturaPlayerTest( videoId ){
 	
-	// Name this module 
-	module( "kWidget Player" );
-
-	asyncTest("Inline readyCallback fired", function(){
-		
-		window['testAutoPlay'] = function(){
-			var kdp = $( '#myVideoTarget' ).get( 0 );
-			test("AutoPlay flashvar passing", function(){
-				ok( kdp.evaluate('{configProxy.flashvars.autoPlay}') , 'AutoPlay flashvar set');
-			});
+	// Name this module
+	module( "SwfObject 2.2 embed" );
+	var kdp = document.getElementById( videoId );
+	
+	asyncTest("SwfObject 2.2 is ready", function(){
+		window['onPlayerPlayed'] = function(){
+			ok( true, "playerPlayed event recived ( passed via flashvar )" );
+			
+			kdp.sendNotification('doPause');
+			// test done:
+			start();
+			// give time for testSwarm cooldown.
+			setTimeout(function(){
+				testForNonKalturaSwf();
+			},100)
 		}
 		
-		kalturaQunitWaitForPlayer( function(){
-			equal( window.kWidgetCallbackWithID, videoId, "ReadyCallback fired with id:" + videoId );
-			testAutoPlay();
-			// Done with async 
-			start();
+		kdp.addJsListener( 'playerPlayed', 'onPlayerPlayed')	
+		
+		kalturaQunitWaitForPlayer(function(){
+			ok(true, "Player loaded via swf object embed");
 		});
 	});
-}
-function readyCallbackFired( playerId ){
-	window.kWidgetCallbackWithID = playerId;
+	
+	asyncTest("SwfObject Non-Kaltura embed present", function(){
+		window['testForNonKalturaSwf'] = function(){
+			if( kWidget.supportsFlash() ){
+				ok( $('object#nonKalturaSwf').length, "Non kaltura object embed" );
+			} else {
+				ok( true, 'browser does not support flash');
+			}
+			start();
+		}
+	});
 }
 </script>
 <!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php and after any jsCallbackReady stuff-->
 <script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
 </head>
 <body>
-<h2> kWidget Player test </h2>
+<h2> SwfObject 2.2 embed test </h2>
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
 <br />
-
-<div id="myVideoTarget" style="width:400px;height:330px;">
-	<!--  SEO and video metadata go here -->
-	<span property="dc:description" content="test folgers coffe"></span>
-	<span property="media:title" content="FolgersCoffe.mpeg"></span>
-	<span property="media:width" content="400"></span>
-	<span property="media:height" content="300"></span>
-</div>
-<script>
-	window['doPlayCallback'] = function( playerId ){
-		console.log( 'kWidget doPlayCallback ' + playerId );
-		//$('body').append( '<div>started playback</div>' );
+<div id="videoPlayerTarget">
+</div><br>
+Non-Kaltura swf object embed with swfObject:<br>
+<div id="nonKalturaSwf"></div>
+<script type="text/javascript">
+	var urlPath = window.location.href.split("SWFObject_2.2.html")[0];
+	// Embed video-player
+    var flashvars = {
+		autoPlay: true
 	};
-	kWidget.embed({
-		'targetId': 'myVideoTarget',
-		'wid': '_243342',
-		'uiconf_id' : '2877502',
-		'entry_id' : '0_uka1msg4',
-		'flashvars':{
-			'externalInterfaceDisabled' : false,
-			'autoPlay' : true,
-			'fooBar': 'cats'
-		},
-		'readyCallback': function( playerId ){
-			console.log( "kWidget player ready: " + playerId );
-			var kdp = $('#' + playerId ).get(0);
-			kdp.addJsListener( 'doPlay', 'doPlayCallback');
-			readyCallbackFired( playerId );
-		}
-	});
+	var params = {
+		allowFullScreen: "true",
+		allowNetworking: "all",
+		allowScriptAccess: "always",
+		bgcolor: "#000000"
+	};
+	var attributes = {
+		id: "videoPlayer",
+		name: "videoPlayer"
+	};
+	
+	var flashObj = swfobject.embedSWF(
+			"http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4", 
+			"videoPlayerTarget", 
+			"400", 
+			"330", 
+			"10.0.0.0", 
+			"resources/swfobject/expressinstall.swf", 
+			flashvars, 
+			params, 
+			attributes
+	);
+	// Also embed non-kaltua swf:
+	swfobject.embedSWF(
+			"resources/swfobject/test.swf", 
+			"nonKalturaSwf", 
+			"300", 
+			"120", 
+			"9.0.0", 
+			"resources/swfobject/expressInstall.swf"
+	);
 </script>
-<p><p>
+
 <!-- 
-<b> Slow loading document.write scripts </b>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=0"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=1"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=2"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=3"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=4"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=5"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=6"></script>
- -->
- 
- 
- <!-- 
- 
- 
- <layout id="default player dark" skinPath="/content/uiconf/kaltura/kmc/nab/skin.swf?a=6‬">
+
+<layout id="default player dark" skinPath="/content/uiconf/kaltura/kmc/nab/skin.swf?a=6‬">
   <HBox id="topLevel" width="100%" height="100%">
     <VBox id="player" width="100%" height="100%" styleName="black">
       <Plugin id="kalturaMix" width="0%" height="0%" includeInLayout="false" loadingPolicy="onDemand"/>
@@ -102,7 +115,7 @@ function readyCallbackFired( playerId ){
 				    <Label 
 				      id="offlineMessage" styleName="offlineMessage"
 				      text="{mediaProxy.entry.offlineMessage}" visible="{mediaProxy.isOffline}"
-				      width="100%" height="30"/>
+				      width="100%" height="30"/> 
 			     	<Spacer height="100%" />
 		    	</VBox>
         <Screens id="screensLayer" width="100%" height="100%" mouseOverTarget="{PlayerHolder}" styleName="clickThrough" startScreenId="startScreen" startScreenOverId="startScreen" pauseScreenOverId="pauseScreen" pauseScreenId="pauseScreen" playScreenOverId="playScreen" endScreenId="endScreen" endScreenOverId="endScreen"/>
@@ -258,7 +271,7 @@ function readyCallbackFired( playerId ){
   </uiVars>
 </layout>
 
-  -->
- 
+ -->
+
 </body>
 </html>
