Added forceDirectDownload flag to simulate the player on limited devices

--- a/modules/KalturaSupport/tests/MediaSpaceV3.html
+++ b/modules/KalturaSupport/tests/MediaSpaceV3.html
@@ -2,12 +2,11 @@
 <html>
 <head>
 <title>MediaSpace v3</title>
-
-<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script>
-	kWidget.supportsFlash = function() { return false; };
-	kWidget.supportsHTML5 = function() { return false; };
+window.preMwEmbedConfig = {};
+window.preMwEmbedConfig['forceDirectDownload'] = true;
 </script>
+<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 </head>
 <body>
 <h2>MediaSpace v3</h2>	
