--- a/modules/KalturaSupport/tests/AccessControlPreview.qunit.html
+++ b/modules/KalturaSupport/tests/AccessControlPreview.qunit.html
@@ -7,6 +7,7 @@
 <script type="text/javascript">	
 function jsKalturaPlayerTest( videoId ){
 	var kdp = $('#' + videoId)[0];
+	module( "Access Control Preview" );
 	// Name this module
 	asyncTest("Free Preview End event", function(){
 		
