renamed touch-punch to touchPunch
--old name was messing with resource defined name

--- a/modules/KalturaSupport/tests/ResizablePlayer.html
+++ b/modules/KalturaSupport/tests/ResizablePlayer.html
@@ -4,7 +4,7 @@
 <title>Resizable Player</title>
 	<script type="text/javascript" src="../../../libraries/jquery/jquery-1.7.2.js"></script>
 	<script type="text/javascript" src="../../../libraries/jquery/jquery.ui/ui/jquery-ui-1.8.16.custom.js"></script>
-	<script type="text/javascript" src="../../../libraries/jquery/plugins/jquery.ui.touch-punch.js"></script>
+	<script type="text/javascript" src="../../../libraries/jquery/plugins/jquery.ui.touchPunch.js"></script>
 	<script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 	<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/themes/base/jquery-ui.css" />
 	<style>
