fixes DownloadLinkPlayer.qunit.html test
-- use a <a /> href with target attribute, easier to detect in test and
has less chance of running into popup blockers, the click binding
should still be triggred

--- a/modules/KalturaSupport/tests/DownloadLinkPlayer.qunit.html
+++ b/modules/KalturaSupport/tests/DownloadLinkPlayer.qunit.html
@@ -22,7 +22,7 @@ function jsKalturaPlayerTest( videoId ){
 		kalturaQunitWaitForPlayer(function(){
 			ok( $iframe.find( '.play-btn-large' ).length, "Found player link" );
 			var link = $iframe.find( '.play-btn-large' ).parent().attr('href') || '';
-			notEqual( link.indexOf( '/entryId/0_uka1msg4/' ), -1 ,
+			notEqual( link.indexOf( '/entry_id/0_uka1msg4' ), -1 ,
 					"Link includes entry path" );
 			start();
 			setTimeout(function(){
