--- a/modules/KalturaSupport/tests/NoHLSforLessThan10Seconds.qunit.html
+++ b/modules/KalturaSupport/tests/NoHLSforLessThan10Seconds.qunit.html
@@ -24,7 +24,7 @@ function jsKalturaPlayerTest( videoId ){
 				start();
 			});
 		} else {
-			ok( true, "This test only applies to HLS enabled browsers")
+			ok( true, "This test only applies to HLS enabled browsers");
 			start();
 		}
 	});
