--- a/modules/KalturaSupport/tests/LegacyMultipleDynamicEmbeds.qunit.html
+++ b/modules/KalturaSupport/tests/LegacyMultipleDynamicEmbeds.qunit.html
@@ -1,107 +1,78 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>kWidget with Object tag on page test</title>
+<title>Legay Multiple Embeds test</title>
 <script type="text/javascript" src="../../../tests/qunit/qunit-bootstrap.js"></script>
 <script type="text/javascript" src="../../../mwEmbedLoader.php?debug=true"></script>
 <script type="text/javascript">	
-window.kWidgetCallbackWithID = false;
+var startedTest = false;
 function jsKalturaPlayerTest( videoId ){
-	if( videoId != 'myVideoTarget' ){
-		// don't run tests for non-kWidget with Object tag on page
+	if( startedTest ){
 		return ;
 	}
+	startedTest = true;
 	// Name this module
-	module( "kWidget with Object tag on page" );
-
-	asyncTest("Inline readyCallback fired", function(){
-		kalturaQunitWaitForPlayer(function(){
-			if( window.kWidgetCallbackWithID ){
-				equal( window.kWidgetCallbackWithID, videoId, " ReadyCallback fired for video:" + videoId );
-				// done with async
-				start();
+	module( "Legay Multiple Embeds" );
+	asyncTest("Dynamic Embed with innerHTML inject", function(){
+		var addedNewEmbed = false;
+		kWidget.addReadyCallback( function(){
+			if( !addedNewEmbed ){
+				return ;
 			}
+			ok( true, 'Ready callback called on dynamic in place new embed');
+			start();
 		});
+		setTimeout(function(){
+			addedNewEmbed = true;
+			doDynamicEmbed();
+		},1000)
 	});
 }
-function readyCallbackFired( playerId ){
-	if( playerId == 'myVideoTarget' ){
-		window.kWidgetCallbackWithID = playerId;
+</script>
+<script>
+	function jsCallbackReady( videoId ){
+		if( console && console.log ){
+			console.log( 'jsCallbackReady: ' + videoId );
+		}
 	}
-}
 </script>
 <!-- qunit-kaltura must come after qunit-bootstrap.js and after mwEmbedLoader.php and after any jsCallbackReady stuff-->
 <script type="text/javascript" src="resources/qunit-kaltura-bootstrap.js"></script>
 </head>
 <body>
-<h2> kWidget with Object tag on page test </h2>
+<h2> Legay Multiple Embeds test </h2>
 <a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop chrome and safari.
-<br />
-
-<div id="myVideoTarget" style="width:400px;height:330px;">
-	<!--  SEO and video metadata go here -->
-	<span property="dc:description" content="test folgers coffe"></span>
-	<span property="media:title" content="FolgersCoffe.mpeg"></span>
-	<span property="media:width" content="400"></span>
-	<span property="media:height" content="300"></span>
-</div>
-<div style="float:left;width:420px;">
-Secondary Object tag video embed: 
-<object id="kaltura_player_1334859345" name="kaltura_player_1334859345" 
-type="application/x-shockwave-flash" allowFullScreen="true" 
-allowNetworking="all" allowScriptAccess="always" 
-height="333" width="400" bgcolor="#000000" 
-xmlns:dc="http://purl.org/dc/terms/" 
-xmlns:media="http://search.yahoo.com/searchmonkey/media/" 
-rel="media:video" 
-resource="http://www.kaltura.com/index.php/kwidget/cache_st/1334859345/wid/_243342/uiconf_id/7752572/entry_id/0_k4dkai5u" 
-data="http://www.kaltura.com/index.php/kwidget/cache_st/1334859345/wid/_243342/uiconf_id/7752572/entry_id/0_k4dkai5u">
-	<param name="allowFullScreen" value="true" />
-	<param name="allowNetworking" value="all" />
-	<param name="allowScriptAccess" value="always" />
-	<param name="bgcolor" value="#000000" />
-	<param name="flashVars" value="&" />
-	<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1334859345/wid/_243342/uiconf_id/7752572/entry_id/0_k4dkai5u" />
-</object>
-</div>
+<br /><br />
+<a href="#" id="doEmbed">Do post domReady embed</a>
+<div id="videoContainer"></div>
 <script>
-	window['doPlayCallback'] = function( playerId ){
-		console.log( 'kWidget doPlayCallback ' + playerId );
-		//$('body').append( '<div>started playback</div>' );
-	};
-	kWidget.embed({
-		'targetId': 'myVideoTarget',
-		'wid': '_243342',
-		'uiconf_id' : '2877502',
-		'entry_id' : '0_uka1msg4',
-		'flashvars':{
-			'externalInterfaceDisabled' : false,
-		},
-		'readyCallback': function( playerId ){
-			console.log( "kWidget player ready: " + playerId );
-			var kdp = $('#' + playerId ).get(0);
-			kdp.addJsListener( 'doPlay', 'doPlayCallback');
-			readyCallbackFired( playerId );
-		}
-	});
+	var aElm = document.getElementById( "doEmbed" );
+	aElm.onclick = function(){
+		doDynamicEmbed();
+	}
+	function doDynamicEmbed(){
+		var elm = document.getElementById( "videoContainer" );
+		elm.innerHTML = '<object id="kaltura_player" name="kaltura_player" type="application/x-shockwave-flash" allowFullScreen="true" '+
+			'allowNetworking="all" allowScriptAccess="always" height="333" width="400" xmlns:dc="http://purl.org/dc/terms/" ' +
+			'xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" ' +
+			'resource="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4" ' +
+			'data="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4">' +
+				'<param name="allowFullScreen" value="true" />' +
+				'<param name="allowNetworking" value="all" />' +
+				'<param name="allowScriptAccess" value="always" />' +
+				'<param name="bgcolor" value="#000000" />' +
+				'<param name="flashVars" value="&externalInterfaceDisabled=false" />' +
+				'<param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1292436446/wid/_243342/uiconf_id/2877502/entry_id/0_uka1msg4" />' +
+			'</object>';
+			
+		// once embed do kCheckAddScript call: 
+		kCheckAddScript();
+	}
+	doDynamicEmbed();
 </script>
-<p><p>
-<!-- 
-<b> Slow loading document.write scripts </b>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=0"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=1"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=2"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=3"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=4"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=5"></script>
-<script type="text/javascript" src="../../../services.php?service=sleepTest&waitTime=6"></script>
- -->
- 
- 
- <!-- 
- 
- 
- <layout id="default player dark" skinPath="/content/uiconf/kaltura/kmc/nab/skin.swf?a=6‬">
+<!--
+
+<layout id="default player dark" skinPath="/content/uiconf/kaltura/kmc/nab/skin.swf?a=6‬">
   <HBox id="topLevel" width="100%" height="100%">
     <VBox id="player" width="100%" height="100%" styleName="black">
       <Plugin id="kalturaMix" width="0%" height="0%" includeInLayout="false" loadingPolicy="onDemand"/>
@@ -117,7 +88,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1334859345/wid/_243342/u
 				    <Label 
 				      id="offlineMessage" styleName="offlineMessage"
 				      text="{mediaProxy.entry.offlineMessage}" visible="{mediaProxy.isOffline}"
-				      width="100%" height="30"/>
+				      width="100%" height="30"/> 
 			     	<Spacer height="100%" />
 		    	</VBox>
         <Screens id="screensLayer" width="100%" height="100%" mouseOverTarget="{PlayerHolder}" styleName="clickThrough" startScreenId="startScreen" startScreenOverId="startScreen" pauseScreenOverId="pauseScreen" pauseScreenId="pauseScreen" playScreenOverId="playScreen" endScreenId="endScreen" endScreenOverId="endScreen"/>
@@ -273,7 +244,7 @@ data="http://www.kaltura.com/index.php/kwidget/cache_st/1334859345/wid/_243342/u
   </uiVars>
 </layout>
 
-  -->
- 
+ -->
+
 </body>
 </html>
