--- a/modules/KalturaSupport/tests/AccessControlPreview.qunit.html
+++ b/modules/KalturaSupport/tests/AccessControlPreview.qunit.html
@@ -58,12 +58,36 @@ function jsKalturaPlayerTest( videoId ){
 				setTimeout(function(){
 					kdp.sendNotification( 'doPlay' );
 				},1000)
-				setTimeout(function(){
-					ok( kdp.evaluate('{video.player.currentTime}') > 11, 'Playing content past 11 seconds');
-					kdp.sendNotification('doPause');
-					// done will all tests
-					start();
-				},4000);
+				var checkTestDone = function(){
+					if( kdp.evaluate('{video.player.currentTime}') > 11 ){
+						ok( kdp.evaluate('{video.player.currentTime}') > 11, 'Playing content past 11 seconds');
+						kdp.sendNotification('doPause');
+						// done will all tests
+						start();
+						return true;
+					}
+					return false;
+				};
+				var testDone = false;
+				setTimeout( function(){
+					if( checkTestDone() ){
+						testDone = true;
+					}
+				}, 3000);
+				setTimeout( function(){
+					if( !testDone && checkTestDone() ){
+						testDone = true;
+					}
+				}, 6000);
+				setTimeout( function(){
+					if( !testDone && checkTestDone() ){
+						testDone = true;
+					}
+					if( !testDone ){
+						// test seek timed out:
+						ok( false, "Could not seek and play past 11" );
+					}
+				}, 9000);
 			};
 			// Start playback
 			kdp.sendNotification( 'doPlay' );
